navbar left align bugfix

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -2174,10 +2174,10 @@ a {
     color: #2c3940; }
 
 .white {
-  background-color: white; }
+  background-color: #fff; }
 
 .white-text {
-  color: white; }
+  color: #fff; }
 
 .container {
   padding: 0 1rem;
@@ -2401,7 +2401,8 @@ a {
 
 nav {
   color: #fff;
-  width: 100%; }
+  width: 100%;
+  position: relative; }
   nav a {
     color: #fff; }
   nav a.logo {
@@ -2423,7 +2424,7 @@ nav {
     font-size: 2.1rem;
     padding: 0; }
     nav .brand-logo.right {
-      float: right;
+      right: 0.5rem;
       padding: 0; }
   nav ul {
     margin: 0;
@@ -2668,16 +2669,16 @@ small {
   padding: 1rem; }
   .card h1 {
     font-size: 1.71rem;
-    color: white; }
+    color: #fff; }
   .card h2 {
     font-size: 1.14rem;
-    color: white; }
+    color: #fff; }
   .card h3 {
     font-size: 1rem;
-    color: white; }
+    color: #fff; }
   .card p {
     font-size: 0.8rem;
-    color: white; }
+    color: #fff; }
   .card .card-content {
     position: relative;
     overflow: hidden;
@@ -2695,7 +2696,7 @@ small {
       width: 100%;
       z-index: -1; }
   .card .card-footer {
-    background-color: white;
+    background-color: #FFF;
     padding: 2px 1rem 8px 1rem;
     -webkit-border-radius: 0 0 2px 2px;
     -moz-border-radius: 0 0 2px 2px;
@@ -2703,7 +2704,7 @@ small {
     background-clip: padding-box;
     margin-bottom: 30px; }
     .card .card-footer h1, .card .card-footer h2, .card .card-footer h3, .card .card-footer p {
-      color: black; }
+      color: #000; }
   .card a.card-action {
     margin-right: 20%;
     color: #ffab2e; }
